yaml-examples/gaps/gaps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaps
  namespace: default
spec:
  selector:
    app: gaps
  ports:
  - port: 8484
    targetPort: 8484
